Fix socerboard layout issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -236,7 +236,7 @@ body {
 
     @media screen and (max-width: 992px) {
       font-size: 0.75rem;
-      padding: 10px 15px;ull
+      padding: 10px 15px;
     }
   }
 
